--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,8 +146,35 @@ header .logo img {
     width: 35%;
     height: auto;
     object-fit: contain;
-    border-radius: 0px;
+    border-radius: 7px;
     margin-bottom: 35px;
+}
+.MuiChip-root {
+    color: #fff;
+    border: none;
+    cursor: default;
+    height: 32px;
+    display: inline-flex;
+    outline: 0;
+    padding: 0;
+    font-size: 0.8125rem;
+    box-sizing: border-box;
+    transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    align-items: center;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    white-space: nowrap;
+    border-radius: 16px;
+    vertical-align: middle;
+    justify-content: center;
+    text-decoration: none;
+    background-color: #616161;
+}
+.MuiChip-label {
+    overflow: hidden;
+    white-space: nowrap;
+    padding-left: 12px;
+    padding-right: 12px;
+    text-overflow: ellipsis;
 }
 
 .token {
@@ -338,16 +365,16 @@ header .logo img {
     position: relative;
     display: flex;
     align-items: center;
-    border-radius: 0px;
-    font-weight: 600;
-    font-size: 2.25rem;
-    line-height: 32px;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.75;
     color: #0f0f0f;
     height: 100px;
     cursor: pointer;
     transition-duration: 0.3s;
     justify-content: center !important;
-    background: linear-gradient(90deg,#fdcb6e 0,#d63031 35%,#e84393 75%,#6c5ce7);
+    background: #fff;
     margin-top: 20px;
     margin-bottom: 10px;
     transition: 0.5s;
@@ -359,33 +386,19 @@ header .logo img {
     position: relative;
     display: flex;
     align-items: center;
-    border-radius: 0px;
-    font-weight: 600;
-    font-size: 2.25rem;
-    line-height: 32px;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.75;
     color: #0f0f0f;
     height: 100px;
     cursor: pointer;
     transition-duration: 0.3s;
     justify-content: center !important;
+    background: #fff;
     margin-top: 20px;
     margin-bottom: 10px;
     transition: 0.5s;
-}
-
-.button-box {
-    display: flex;
-    align-items: center;
-    position: relative;
-    height: 100px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    font-weight: 600;
-    font-size: 2.25rem;
-    line-height: 32px;
-    transition: 0.5s;
-    justify-content: center !important;
-    weight: 245px;
 }
 
 
