--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,19 +3,19 @@
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: 'BebasNeue', sans-serif
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 }
 
 head {
 
-    font-family: 'BebasNeue', sans-serif
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 
 }
 
 body {
     
     overflow-x: hidden;
-    font-family: 'BebasNeue', sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
     background: url("../img/background.jpeg") 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
@@ -99,14 +99,11 @@ header .logo img {
 }
 
 .main-area {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+    width: 444px;
 }
 
 .main-area__left {
-    flex-basis: 50%;
+    flex-basis: 100%;
 }
 
 .main-area__right {
@@ -116,6 +113,53 @@ header .logo img {
     padding: 40px 30px;
     backdrop-filter: blur(10px);
     border-radius: 4px;
+}
+
+.price {
+    background: rgb(21, 26, 31);
+    padding: 24px 24px 10px;
+    border-radius: 6px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
+
+.price-list {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin-bottom: 20px;
+}
+
+.price-list li {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+}
+
+.price-list li .text {
+    font-size: 15px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.price-list li .number {
+
+    font-size: 1.25rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: bold;
+    line-height: 1.6;
+    letter-spacing: 0.0075em;
+}
+
+.token-number {
+    display: flex;
+    align-items: left;
 }
 
 .left-title {
@@ -213,13 +257,37 @@ header .logo img {
 }
 
 .token-number {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 12px;
-    font-weight: 300!important;
-    transform: translateY(-5px);
+    font-size: 1.25rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: bold;
+    line-height: 1.6;
+    letter-spacing: 0.0075em;
 }
+
+.counter {
+    width: 100px;
+    font: 800 40px system-ui;
+    overflow: hidden;
+  }
+  .numbers {
+    width: auto;
+    display: flex;
+    animation: countNumber 4s infinite alternate;
+    animation-timing-function: steps(10);
+  }
+  .numbers div {
+    text-align: center;
+    flex: 0 0 100px;
+  }
+  
+  @keyframes countNumber {
+    0% {
+      margin-left: 0px;
+    }
+    100% {
+      margin-left: -1000px;
+    }
+  }
 
 
 .pre-total {
@@ -340,14 +408,8 @@ header .logo img {
     align-items: center;
 }
 
-.price {
-    color: #000;
-    margin: 10px 0px 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 18px;
-    font-weight: bold;
+.monkey {
+    margin-top: 50px;
 }
 
 .join-btn span {
@@ -362,22 +424,58 @@ header .logo img {
 #root button {
     position: relative;
     display: flex;
+    text-transform: uppercase;
+    width: 348px;
+    justify-content: center!important;
     align-items: center;
-    border-radius: 4px;
-    font-weight: 500;
-    font-size: 0.875rem;
-    line-height: 1.75;
-    color: #0f0f0f;
-    padding: 12px 16px;
-    height: 50px;
+    background: linear-gradient( rgb(96, 74, 229) 0%, rgb(129, 62, 238) 100%)!important;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 32px;
+    color: #fff;
+    padding: 20px 35px;
+    height: 60px;
     cursor: pointer;
-    transition-duration: 0.3s;
-    letter-spacing: 0.5px;
-    justify-content: center !important;
-    background: #fff;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    transition: 0.5s;
+    transition-duration: .3s;
+    letter-spacing: .5px;
+}
+
+.MuiTypography-caption {
+    font-size: 0.75rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.66;
+    letter-spacing: 0.02857em;
+    
+}
+
+.MuiTypography-alignCenter {
+    text-align: center;
+    
+}
+
+.MuiTypography-displayBlock {
+    display: block;
+    
+}
+
+.jss3 {
+    color: white;
+    margin: 8px;
+    display: flex;
+    padding: 8px;
+    font-size: 18px;
+    background: #384457;
+    height: 3rem;
+    width: 165px;
+    align-items: center;
+    font-weight: bold;
+    margin-right: 0;
+    align-content: center;
+    border-radius: 5px;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #root button:hover {
